@@ -32,6 +32,7 @@ Para adaptar las aplicaciones a esta versión es necesario realizar cambios en e
 * División en distintos ficheros al generar listas FAP de más de 100 elementos.
 * Posibilidad de personalizar el mensaje de la página de aportación. 
 * Posibilidad de filtrar las solicitudes de la tabla que las lista.
+* Añadidas nuevas librerias de certificados y resoluciones, así como actualizada la del aed.
 
 h3. Versión 1.3.8
 
